# OmniWaterMask-training

./: .gitignore  README.md  Train OWM faster.ipynb  Train OWM v2.ipynb  Train OWM.ipynb  Train_water_with_FLAIR.ipynb  augs.py  distance_transform_optimized.py  helpers.py  profile_training.py  pyproject.toml  utils.py
get datasets/FLAIR/: Download FLAIR.ipynb  Mosaic and split FLAIR.ipynb
get datasets/S1S2 Water/: Download S1S2.ipynb  Get L2A data - Planetary Computer.ipynb  Split S1S2 water into patches.ipynb  Split S1S2.ipynb
