[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniwatermask-training"
authors = [{name = "Nick Wright", email = "nicholas.wright@dpird.wa.gov.au"}]
version = "0.0.1"
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
keywords = [
]

dependencies = [
    "omnicloudmask>=1.7.0",
    "opencv-python>=4.9.0.80",
    "geopandas>=1.0",
    "osmnx>=2.0.0",
    "scipy>=1.10.0",
    "pyarrow>=10.0.0",
    "huggingface_hub>=0.28.1",
    "safetensors>=0.3.0",
    "fastai>=2.8.6",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.8.3",
    "rasterio>=1.4.3",
    "fastprogress==1.0.2",
    "ruff>=0.14.14",
]

[dependency-groups]
dev = [
    
]

[project.urls]
Homepage = "https://github.com/DPIRD-DMA/OmniWaterMask-training"
Repository = "https://github.com/DPIRD-DMA/OmniWaterMask-training"

[tool.setuptools.packages.find]
include = ["omniwatermask-training*"]


[tool.ruff.lint]
select = ["E", "F", "B"]

